--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,6 @@ plugins {
     id 'androidx.navigation.safeargs' version '2.4.2' apply false
     id 'com.google.gms.google-services' version '4.3.10' apply false
 }
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
